--- a/package.json
+++ b/package.json
@@ -12,10 +12,19 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
     "daisyui": "^5.4.7",
+    "firebase": "^12.5.0",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
+    "motion": "^12.23.24",
     "react": "^19.1.1",
+    "react-datepicker": "^8.8.0",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.9.5",
+    "react-router-dom": "^7.9.5",
+    "sweetalert2": "^11.26.3",
+    "swiper": "^12.0.3",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
